<package>
    <name>fubot_move_base</name>
    <version>0.0.1</version>
    <description>
        moveBaseMsgs
    </description>
    <author>Ma Wenhui</author>
    <maintainer email="wenhui.ma@fubot.cn">Ma Wenhui</maintainer>
    <license> BSD </license>
    <url> </url>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>cmake_modules</build_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->

    <run_depend>actionlib</run_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>tf</run_depend>

</package>
